Bug 408002 - Issue with selecting multiple layers
Summary: Issue with selecting multiple layers
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-27 16:38 UTC by grzegorzpedrycz
Modified: 2019-06-06 02:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description grzegorzpedrycz 2019-05-27 16:38:58 UTC
SUMMARY

We can not select multiple layers using shift+LMB  when clicking on the layer thumbnail . We need to click in any other place in layer tab ( name etc ) 
 
4.2.0 Beta nigt builid git 77c9d6b 


STEPS TO REPRODUCE
1. Create few empty layers
2. Try to select multiple with shift+LMB clicking on the layer thumbnail 
3. 

OBSERVED RESULT
Nothing happend


EXPECTED RESULT
Multiple layer celected


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 vanyossi 2019-05-28 04:57:33 UTC
Git commit c475619ef738854bf40d6b6844510c13da1357dc by Ivan Yossi.
Committed on 28/05/2019 at 04:55.
Pushed by ivany into branch 'master'.

Improve selection behaviour on layer docker when pressing thumbnail
BACKPORT:krita/4.2

M  +9    -1    plugins/dockers/layerdocker/NodeDelegate.cpp

https://invent.kde.org/kde/krita/commit/c475619ef738854bf40d6b6844510c13da1357dc
Comment 2 grzegorzpedrycz 2019-05-30 09:24:00 UTC
Why that improvement is not part of official krita 4.2 Relase ?
Comment 3 vanyossi 2019-05-30 16:04:55 UTC
The changes were sent after the installers were made. Binaries for distribution are prepared a few days before realease.

This changes will probably be available in 4.2.1  :)

In the mean time for multiple selections click on the name part of the layer
Comment 4 Halla Rempt 2019-06-02 10:08:03 UTC
Git commit f56df71a77a9a3f3a60fd8b71d3f75976cc3ac2b by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 02/06/2019 at 09:37.
Pushed by rempt into branch 'krita/4.2'.

Improve selection behaviour on layer docker when pressing thumbnail
BACKPORT:krita/4.2
(cherry picked from commit c475619ef738854bf40d6b6844510c13da1357dc)

M  +9    -1    plugins/dockers/layerdocker/NodeDelegate.cpp

https://invent.kde.org/kde/krita/commit/f56df71a77a9a3f3a60fd8b71d3f75976cc3ac2b
Comment 5 grzegorzpedrycz 2019-06-05 08:58:43 UTC
Bug still appear in Krita 4.2.1 even if in release note we read that is solved ;)
Comment 6 vanyossi 2019-06-06 02:23:56 UTC
This is ongoing: Shift click on the thumbnail will work only if the layer is not a parent layer (either group or have masks applied) unless we select it, but if we do select it multiple selection breaks.

I prefer to select using name area, but i will send the change to make it multiselect on thumbnail. This of course will make selection on groups not possible if pressing the thumbnail.