Improve selection behaviour on layer docker when pressing thumbnail

BUG:408002
BACKPORT:krita/4.2
(cherry picked from commit c475619ef738854bf40d6b6844510c13da1357dc)