plugins/dockers/layerdocker/NodeDelegate.cpp
@@ -805,12 +805,20 @@ bool NodeDelegate::editorEvent(QEvent *event, QAbstractItemModel *model, const Q
             } else if (mouseEvent->modifiers() == (Qt::ControlModifier | Qt::ShiftModifier | Qt::AltModifier)) {
                 action = SELECTION_INTERSECT;
                 hasCorrectModifier = true;
+            } else {
+                d->view->setItemsExpandable(false);
+                d->view->setSelectionMode(QAbstractItemView::ExtendedSelection);
+
+                QItemSelectionModel *selectionModel = d->view->selectionModel();
+                selectionModel->select(index, QItemSelectionModel::ToggleCurrent);
+
+                return false;
             }
 
             if (hasCorrectModifier) {
                 model->setData(index, QVariant(int(action)), KisNodeModel::SelectOpaqueRole);
             }
-            d->view->setCurrentIndex(index);
+
             return true; //If not here then the item is !expanded when reaching return false;
         }
 
